force-app/main/default/objects/CommodityTaxes__c/CommodityTaxes__c.object-meta.xml
<CustomObject>
    <label>Impostos da Commodity</label>
    <nameField>
        <displayFormat>COMOD-{0000}</displayFormat>
        <label>Impostos da Commodity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impostos das Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>