force-app/main/default/objects/CommodityTaxes__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <referenceTo>OrderCommodity__c</referenceTo>
    <relationshipLabel>Impostos das Commodities</relationshipLabel>
    <relationshipName>Impostos_das_Commodities</relationshipName>
    <type>Lookup</type>
</CustomField>