force-app/main/default/objects/CommodityTaxes__c/fields/DeductionAmount__c.field-meta.xml
<CustomField>
    <fullName>DeductionAmount__c</fullName>
    <label>Valor da Dedução</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>