force-app/main/default/objects/CommodityTaxes__c/fields/PercentageDeducted__c.field-meta.xml
<CustomField>
    <fullName>PercentageDeducted__c</fullName>
    <label>Porcentagem Deduzida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>