force-app/main/default/objects/CommodityTaxes__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imposto</label>
    <referenceTo>BarterTaxes__c</referenceTo>
    <relationshipLabel>Impostos das Commodities</relationshipLabel>
    <relationshipName>Impostos_das_Commodities</relationshipName>
    <type>Lookup</type>
</CustomField>