force-app/main/default/objects/CommodityTaxes__c/listViews/ImpostosCommodities.listView-meta.xml
<ListView>
    <fullName>ImpostosCommodities</fullName>
    <columns>NAME</columns>
    <columns>Commodity__c</columns>
    <columns>Tax__c</columns>
    <columns>DeductionAmount__c</columns>
    <columns>PercentageDeducted__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Mine</filterScope>
    <label>Impostos das Commodities</label>
</ListView>